решение issue#35 + начало рефакторинга main.go
